 * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
 * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
 * Fix: Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 * Fix: Prevent lowercase conversions of IndexView column headers (Virag Jain)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
 * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 * Maintenance: Optimise use of `specific` on Task and TaskState (Matt Westcott)
 * Maintenance: Use table UI component for workflow task index view (Matt Westcott)
 * Maintenance: Make header search available on generic index view (Matt Westcott)


5.0.1 (25.05.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
 * Fix: Ensure that copying page correctly picks up the latest revision (Matt Westcott)
 * Fix: Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
 * Fix: Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
 * Fix: Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
 * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
 * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)