@@ -28,6 +28,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Remove comment button on InlinePanel fields (Sage Abdullah)
  * Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
  * Prevent lowercase conversions of IndexView column headers (Virag Jain)
+ * Ensure that `RichText` objects with the same values compare as equal (NikilTn)
 
 ### Documentation
 
